--- a/Create_dataset_tsv.ipynb
+++ b/Create_dataset_tsv.ipynb
@@ -24,7 +24,7 @@
     "df[\"sample_name\"]=df[\"sample_name\"].replace(\".raw\", value=\"\", regex=True)\n",
     "df[\"comment\"] = \" \"\n",
     "df[\"MAPnumber\"] = \" \"\n",
-    "df.to_csv(os.path.join(\"config\", \"samples.tsv\"), sep=\"\\t\")\n",
+    "df.to_csv(os.path.join(\"config\", \"dataset.tsv\"), sep=\"\\t\")\n",
     "df"
    ]
   },
@@ -52,16 +52,52 @@
     "df[\"sample_name\"]=df[\"sample_name\"].replace(\".mzML\", value=\"\", regex=True)\n",
     "df[\"comment\"] = \" \"\n",
     "df[\"MAPnumber\"] = \" \"\n",
-    "df.to_csv(os.path.join(\"config\", \"samples.tsv\"), sep=\"\\t\")\n",
+    "df.to_csv(os.path.join(\"config\", \"dataset.tsv\"), sep=\"\\t\")\n",
     "df"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "651fe67a",
+   "metadata": {},
+   "source": [
+    "##### `Define blanks/QCs/controls:` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8093b449",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "fList =input(\"Please enter a list of comma separated filenames for your blanks, QCs or control samples from the filelist:: \").split(\",\")\n",
+    "DF_NC = pd.DataFrame({\"sample_name\":fList})\n",
+    "for i, blank in zip(DF_NC.index, DF_NC[\"sample_name\"]):\n",
+    "    for i, filename in zip(df.index, df[\"sample_name\"]):\n",
+    "        if blank==filename:\n",
+    "            DF_NC[\"sample_name\"][i] = df[\"sample_name\"][i]\n",
+    "    DF_NC[\"comment\"]= \" \"\n",
+    "    DF_NC[\"MAPnumber\"] = \" \"\n",
+    "    DF_NC.to_csv(os.path.join(\"config\", \"blanks.tsv\"), sep=\"\\t\")\n",
+    "\n",
+    "sample_DF = df\n",
+    "for blank in fList:\n",
+    "    sample_DF= sample_DF[sample_DF[\"sample_name\"].str.contains(blank)==False ]\n",
+    "sample_DF.to_csv(os.path.join(\"config\", \"samples.tsv\"), sep=\"\\t\")"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "078201c1",
    "metadata": {},
    "source": [
-    "##### `Create a GNPS metadata table:`\n",
+    "##### `Create a detailed GNPS metadata table:`\n",
     "This is datafile-dependent so it is preferable to do it interactively through a Jupyter notebook"
    ]
   },
@@ -88,19 +124,11 @@
     "metadata.to_csv(os.path.join(\"results\", \"GNPSexport\", \"metadata.tsv\"), sep='\\t', index= None)\n",
     "metadata"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3655cbef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('pyopenms')",
+   "display_name": "pyopenms",
    "language": "python",
    "name": "python3"
   },
@@ -114,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (main, Mar 31 2022, 03:38:35) [Clang 12.0.0 ]"
   },
   "vscode": {
    "interpreter": {
