--- a/Create_dataset_tsv.ipynb
+++ b/Create_dataset_tsv.ipynb
@@ -78,9 +78,9 @@
     "fList =input(\"Please enter a list of comma separated filenames for your blanks, QCs or control samples from the filelist:: \").split(\",\")\n",
     "DF_NC = pd.DataFrame({\"sample_name\":fList})\n",
     "for i, blank in zip(DF_NC.index, DF_NC[\"sample_name\"]):\n",
-    "    for i, filename in zip(df.index, df[\"sample_name\"]):\n",
+    "    for j, filename in zip(df.index, df[\"sample_name\"]):\n",
     "        if blank==filename:\n",
-    "            DF_NC[\"sample_name\"][i] = df[\"sample_name\"][i]\n",
+    "            DF_NC[\"sample_name\"][i] = df[\"sample_name\"][j]\n",
     "    DF_NC[\"comment\"]= \" \"\n",
     "    DF_NC[\"MAPnumber\"] = \" \"\n",
     "    DF_NC.to_csv(os.path.join(\"config\", \"blanks.tsv\"), sep=\"\\t\")\n",
@@ -142,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (main, Mar 31 2022, 03:38:35) [Clang 12.0.0 ]"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
