dataset and sample tsv

--- a/Create_dataset_tsv.ipynb
+++ b/Create_dataset_tsv.ipynb
@@ -25,6 +25,7 @@
     "df[\"comment\"] = \" \"\n",
     "df[\"MAPnumber\"] = \" \"\n",
     "df.to_csv(os.path.join(\"config\", \"dataset.tsv\"), sep=\"\\t\")\n",
+    "df.to_csv(os.path.join(\"config\", \"samples.tsv\"), sep=\"\\t\")\n",
     "df"
    ]
   },
@@ -53,6 +54,7 @@
     "df[\"comment\"] = \" \"\n",
     "df[\"MAPnumber\"] = \" \"\n",
     "df.to_csv(os.path.join(\"config\", \"dataset.tsv\"), sep=\"\\t\")\n",
+    "df.to_csv(os.path.join(\"config\", \"samples.tsv\"), sep=\"\\t\")\n",
     "df"
    ]
   },
@@ -72,23 +74,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "fList =input(\"Please enter a list of comma separated filenames for your blanks, QCs or control samples from the filelist:: \").split(\",\")\n",
-    "DF_NC = pd.DataFrame({\"sample_name\":fList})\n",
-    "for i, blank in zip(DF_NC.index, DF_NC[\"sample_name\"]):\n",
-    "    for j, filename in zip(df.index, df[\"sample_name\"]):\n",
+    "fList =input(\"Please enter a list of comma separated filenames for your blanks, QCs or control samples from the filelist: \").split(\",\")\n",
+    "blank_DF = pd.DataFrame({\"sample_name\":fList})\n",
+    "for i, blank in zip(blank_DF.index, blank_DF[\"sample_name\"]):\n",
+    "    for i, filename in zip(df.index, df[\"sample_name\"]):\n",
     "        if blank==filename:\n",
-    "            DF_NC[\"sample_name\"][i] = df[\"sample_name\"][j]\n",
-    "    DF_NC[\"comment\"]= \" \"\n",
-    "    DF_NC[\"MAPnumber\"] = \" \"\n",
-    "    DF_NC.to_csv(os.path.join(\"config\", \"blanks.tsv\"), sep=\"\\t\")\n",
+    "            blank_DF[\"sample_name\"][i] = df[\"sample_name\"][i]\n",
+    "    blank_DF[\"comment\"]= \" \"\n",
+    "    blank_DF[\"MAPnumber\"] = \" \"\n",
+    "    blank_DF.to_csv(os.path.join(\"config\", \"blanks.tsv\"), sep=\"\\t\")\n",
     "\n",
     "sample_DF = df\n",
-    "for blank in fList:\n",
-    "    sample_DF= sample_DF[sample_DF[\"sample_name\"].str.contains(blank)==False ]\n",
-    "sample_DF.to_csv(os.path.join(\"config\", \"samples.tsv\"), sep=\"\\t\")"
+    "if blank_DF.empty:\n",
+    "    sample_DF.to_csv(os.path.join(\"config\", \"samples.tsv\"), sep=\"\\t\")\n",
+    "else:\n",
+    "    for blank in fList:\n",
+    "        sample_DF= sample_DF[sample_DF[\"sample_name\"].str.contains(blank)==False ]\n",
+    "    sample_DF.to_csv(os.path.join(\"config\", \"samples.tsv\"), sep=\"\\t\")"
    ]
   },
   {
