--- a/Create_dataset_tsv.ipynb
+++ b/Create_dataset_tsv.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d2d4ce93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "82179e30",
@@ -18,8 +29,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import os\n",
     "df = pd.DataFrame()\n",
     "df[\"sample_name\"] = [file for file in os.listdir(os.path.join(\"data\", \"raw\")) if file.endswith(\".raw\")]\n",
     "df[\"sample_name\"]=df[\"sample_name\"].replace(\".raw\", value=\"\", regex=True)\n",
@@ -48,8 +57,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import os\n",
     "df = pd.DataFrame()\n",
     "df[\"sample_name\"] = [file for file in os.listdir(os.path.join(\"data\", \"mzML\")) if file.endswith(\".mzML\")]\n",
     "df[\"sample_name\"]=df[\"sample_name\"].replace(\".mzML\", value=\"\", regex=True)\n",
@@ -113,7 +120,6 @@
    "outputs": [],
    "source": [
     "# Create a metadata table from the list of mzML files compatible for GNPS\n",
-    "\n",
     "metadata = pd.DataFrame()\n",
     "metadata[\"filename\"] = [file for file in os.listdir(os.path.join(\"data\", \"mzML\")) if file.endswith(\".mzML\")]\n",
     "metadata[\"ATTRIBUTE_MAPID\"]= [\"MAP\" + str(i) for i in range(len(metadata))]\n",
@@ -128,11 +134,30 @@
     "metadata.to_csv(os.path.join(\"results\", \"GNPSexport\", \"metadata.tsv\"), sep='\\t', index= None)\n",
     "metadata"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c66ec15d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata= pd.read_csv(os.path.join(\"results\", \"GNPSexport\", \"metadata.tsv\"), sep='\\t')\n",
+    "metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c910a29e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyopenms",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -146,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   },
   "vscode": {
    "interpreter": {
