FBMN integration update

--- a/Create_dataset_tsv.ipynb
+++ b/Create_dataset_tsv.ipynb
@@ -131,7 +131,7 @@
     "metadata[\"ATTRIBUTE_media\"]= metadata['filename'].str.extract(r'(ISP2|DNPM|FPY12|MA|soyM\\d*)')\n",
     "metadata[\"ATTRIBUTE_comment\"]= metadata['ATTRIBUTE_genomeID'].astype(str) +\"_\" + metadata[\"ATTRIBUTE_media\"].astype(str)\n",
     "metadata=metadata.drop(columns=\"ATTRIBUTE_genomeIDMDNA\")\n",
-    "metadata.to_csv(os.path.join(\"results\", \"GNPSexport\", \"metadata.tsv\"), sep='\\t', index= None)\n",
+    "metadata.to_csv(os.path.join(\"results\", \"GNPS\", \"metadata.tsv\"), sep='\\t', index= None)\n",
     "metadata"
    ]
   },
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata= pd.read_csv(os.path.join(\"results\", \"GNPSexport\", \"metadata.tsv\"), sep='\\t')\n",
+    "metadata= pd.read_csv(os.path.join(\"results\", \"GNPS\", \"metadata.tsv\"), sep='\\t')\n",
     "metadata"
    ]
   },
